# xf86-video-intel

./: configure.ac  meson.build  meson_options.txt
src/: compat-api.h  i915_pciids.h  intel_device.c  intel_module.c  meson.build
src/legacy/i810/: meson.build
src/legacy/i810/xvmc/: I810XvMC.c  meson.build
src/render_program/: Makefile.am  exa_wm_src_sample_nv12.g6a  exa_wm_src_sample_nv12.g8a  exa_wm_yuv_rgb_bt601.g6a  exa_wm_yuv_rgb_bt601_full.g4a  exa_wm_yuv_rgb_bt601_full.g4b  exa_wm_yuv_rgb_bt601_full.g6a  exa_wm_yuv_rgb_bt601_full.g6b  exa_wm_yuv_rgb_bt601_full.g8a  exa_wm_yuv_rgb_bt601_full.g8b  exa_wm_yuv_rgb_bt601_limited.g7a  exa_wm_yuv_rgb_bt709.g7a  exa_wm_yuv_rgb_bt709_full.g4a  exa_wm_yuv_rgb_bt709_full.g4b  exa_wm_yuv_rgb_bt709_full.g5a  exa_wm_yuv_rgb_bt709_full.g6b  exa_wm_yuv_rgb_bt709_full.g8a  exa_wm_yuv_rgb_bt709_full.g8b  exa_wm_yuv_rgb_bt709_limited.g5a
src/sna/: blt.c  compiler.h  gen2_render.c  gen3_render.c  gen4_render.c  gen4_render.h  gen5_render.c  gen5_render.h  gen6_common.h  gen6_render.c  gen6_render.h  gen7_render.c  gen7_render.h  gen8_eu.c  gen8_eu.h  gen8_render.c  gen9_render.c  kgem.c  kgem.h  meson.build  sna.h  sna_accel.c  sna_blt.c  sna_composite.c  sna_damage.h  sna_display.c  sna_display_fake.c  sna_dri2.c  sna_driver.c  sna_glyphs.c  sna_io.c  sna_present.c  sna_reg.h  sna_render.c  sna_render.h  sna_stream.c  sna_trapezoids_mono.c  sna_video.c  sna_video.h  sna_video_overlay.c  (+2 more)
src/sna/brw/: brw.h  brw_test_gen4.c  brw_test_gen5.c  brw_test_gen6.c  brw_test_gen7.c  brw_wm.c  meson.build
src/sna/fb/: fb.h  fbpict.c  fbspan.c  meson.build
src/uxa/: i965_render.c  i965_video.c  intel_display.c  intel_dri.c  intel_driver.c  meson.build
test/: dri3-test.c
tools/: backlight_helper.c  meson.build  virtual.c
xvmc/: meson.build
